--- a/Buoi_7/buoi_7.html
+++ b/Buoi_7/buoi_7.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <h3>Show đèn led</h3>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card" style="width: 300px">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/css/paris.jpg"
+              alt="Card image"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Đèn Led Thông Minh</h4>
+              <p class="card-text">Some example text.</p>
+
+              <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 col-xl-3"  >
+          <div class="card" style="width: 300px">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/css/paris.jpg"
+              alt="Card image"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Đèn led giá rẻ</h4>
+              <p class="card-text">100.000</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card" style="width: 300px">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/css/paris.jpg"
+              alt="Card image"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Đèn Led lấp lánh</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="card" style="width: 300px">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/css/paris.jpg"
+              alt="Card image"
+            />
+            <div class="card-body">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
